2006-10-02  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/strftime.c (test): Fix %I test.

2006-08-31  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/time.cdl: Don't bother inlining mktime() or
	gmtime_r() by default - they're too big to be worth it.

2006-08-24  Alexander Neundorf <alexander.neundorf@jenoptik.com>

	* src/strftime.cxx: Fixed "%I" (Time in 12 hour modus was 1 hour off)

2006-06-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/strptime.c: Add a testcase for the previous fix.

2006-06-13  Dan Jakubiec  <dan.jakubiec@systech.com>

	* src/strptime.cxx: Removed the initialization of the struct tm fields
	to prevent clobbering of time values when using the following format
	specifiers: %D, %r, %R, %T, %X, %x.

2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/time.h: Added CYGBLD_ATTRIB_STRFTIME_FORMAT where
	appropriate so the compiler does more checking.

2004-08-08  Bart Veer  <bartv@ecoscentric.com>

	* src/strptime.cxx: fix spelling

2003-08-18  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/strptime.cxx: Added string.h to fix compile warnings.  
	* cdl/time.cdl: Updated the requires statement for BSD string
	functions to use the interface rather than the option name.
	
2003-06-26  Brij Bihari Pandey  <fuzzhead012@yahoo.com>
2003-06-26  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/clock.c (main): Add a fudge factor in case the absolute values
	from clock() are small, in which case the percentage variation
	would be large.

2003-06-13  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/clock.c (main): Avoid div-by-zero if mean==0.

	* cdl/time.cdl: build all POSIX files all the time because they
	are used internally by the standard ISO C functions even if not
	exported.
	[Bug 1000001]

2003-04-24  Robert Cragie  <rcc@jennic.com>

	* include/time.inl:
	* include/timeutil.h:
	* src/timeutil.cxx:
	Change return type of cyg_libc_time_itoa() to cyg_ucount8.
	* src/strftime.cxx:
	Change return type of do_format() to cyg_count8.